--- a/src/index.html
+++ b/src/index.html
@@ -2,32 +2,22 @@
 <html lang="en">
 <head>
  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>-->
+  <meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1, initial-scale=1, user-scalable=no, shrink-to-fit=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <!--<link rel="stylesheet" type="text/css" href="slick/slick.css"/>-->
-  <!--<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>-->
+
  <title>AustinNepal</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 
 
  <app-root></app-root>
-
-
-
-
- <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css"/>
- <script src="https://unpkg.com/slick-carousel@1.6.0/slick/slick.js"></script>
-
-
 
 
 </body>
